[package]
name = "timekeep-rs"
version = "0.1.0"
authors = ["Miguel Borges <miguel.borges@hotmail.com>"]
edition = "2021"
description = "A Rust library for efficient and reliable timekeeping functionalities, providing data structures and methods for creating, manipulating, and performing set operations on intervals."
license = "MIT"
repository = "https://github.com/mikebrgs/timekeep-rs.git"
documentation = "https://docs.rs/timekeep-rs"
homepage = "https://github.com/mikebrgs/timekeep-rs"

[dependencies]

[lib]
name = "timekeep_rs"
path = "src/lib.rs"
